--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@upjs/facile-validator",
-  "version": "1.13.0",
+  "version": "1.13.1",
   "description": "Easy HTML form validator written in TypeScript with tree-shaking",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "test:watch": "vitest --watch",
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
-    "release": "yarn test && npx standard-version && git push --follow-tags && npm publish --access public"
+    "release": "yarn test && npx standard-version"
   },
   "lint-staged": {
     "*.ts": "eslint --fix",
@@ -69,11 +69,11 @@
     "path": "0.12.7",
     "prettier": "2.7.1",
     "standard-version": "9.5.0",
-    "typescript": "5.3.2",
+    "typescript": "^5.5.0-dev.20240402",
     "unbuild": "1.2.1",
     "unocss": "0.57.7",
-    "vite": "5.0.2",
-    "vitest": "0.34.6"
+    "vite": "^5.2.8",
+    "vitest": "^0.34.6"
   },
   "bugs": {
     "url": "https://github.com/upjs/facile-validator/issues"
