--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "vitest --watch",
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
-    "release": "yarn test && npx standard-version"
+    "release": "yarn test && npx standard-version && git push --follow-tags && npm publish --access public"
   },
   "lint-staged": {
     "*.ts": "eslint --fix",
